# quip-mcp-server-python

./: .env.example  .gitignore  README.md  pyproject.toml  uvproject.yaml
.clinerules/: github.md
.github/workflows/: ci.yml  release.yml
.uv/: config.toml
src/: quip_client.py  server.py  storage.py  tools.py  version.py
tests/: __init__.py  test_server.py  test_storage.py
tests/e2e/: __init__.py  conftest.py  test_quip_integration.py
